Navigation in progress (spacing fixes needed)

--- a/css/sand_style.css
+++ b/css/sand_style.css
@@ -112,7 +112,8 @@ nav {
   padding: 10px;
 }
 
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 820px) {
   
   .nav-items {
     display: none;
